force-app/main/default/objects/MUSW__Parcel__c/MUSW__Parcel__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Property parcel information</description>
    <label>Parcel</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>