force-app/main/default/objects/MUSW__Parcel__c/fields/External_Parcel__c.field-meta.xml
<CustomField>
    <fullName>External_Parcel__c</fullName>
    <label>External Parcel</label>
    <length>18</length>
    <referenceTo>TEST_Parcels__x</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels</relationshipName>
    <type>ExternalLookup</type>
</CustomField>