force-app/main/default/objects/MUSW__Parcel__c/fields/GISObjectID__c.field-meta.xml
<CustomField>
    <fullName>GISObjectID__c</fullName>
    <label>GISObjectID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>