force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Alert__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Alert__c</fullName>
    <description>Calculated text description of the alert indicator image.</description>
    <formula>CASE ( MUSW__AlertCode__c, 
0, &quot;None&quot;, 
1, &quot;At least one active severe Alert&quot;, 
2, &quot;At least one active warning Alert&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert Note</label>
    <type>Text</type>
</CustomField>