force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessed_Land_Value__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessed_Land_Value__c</fullName>
    <description>Total assessed value of the land of the property</description>
    <label>Assessed Land Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>