force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Address__c</fullName>
    <description>Parcel Owner&apos;s address as indicated by the Assessor. This is usually the full address. If this is not provided by Assessor, use the Assessor address part-fields.</description>
    <label>Owner Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>