force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Name__c</fullName>
    <description>Parcel Owner&apos;s name as indicated by the Assessor. This may be the legal entity name which may be a business or combination of individual&apos;s names</description>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>