force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Post_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Post_Zip_Code__c</fullName>
    <description>Parcel Owner&apos;s address Postal or Zip Code as indicated by the Assessor.</description>
    <label>Owner Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>