force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_State__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_State__c</fullName>
    <description>Parcel Owner&apos;s address State or Province as indicated by the Assessor.</description>
    <label>Owner State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>