force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Assessor_Owner_Street__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Assessor_Owner_Street__c</fullName>
    <description>Parcel Owner&apos;s street address as indicated by the Assessor. Includes street number and street name.</description>
    <label>Owner Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>