force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Block_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Block_Number__c</fullName>
    <description>The Surveyed block number. Often used in conjunction with Lot Number.</description>
    <label>Block</label>
    <length>40</length>
    <type>Text</type>
</CustomField>