force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__City__c.field-meta.xml
<CustomField>
    <fullName>MUSW__City__c</fullName>
    <description>The City this parcel or address is located in.</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>