force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Fire_Zone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fire_Zone__c</fullName>
    <description>The geographic area the property is served by a particular fire hall or category of risk of fire.</description>
    <label>Fire District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fire Zone 1</fullName>
            </value>
            <value>
                <fullName>Fire Zone 2</fullName>
            </value>
            <value>
                <fullName>Fire Zone 3</fullName>
            </value>
            <value>
                <fullName>Fire Zone 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>