force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Flood_Zone__c</fullName>
    <description>The geographic area the property may be affected by a particular flood level or body of water.</description>
    <label>Flood Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flood Zone 1</fullName>
            </value>
            <value>
                <fullName>Flood Zone 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>