force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation__c</fullName>
    <description>The single map location of the centerpoint of the parcel or geocoded location of the address.</description>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>