force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Historic__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the Parcel is historic.</description>
    <label>Historic</label>
    <type>Checkbox</type>
</CustomField>