force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Legal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Legal_End_Date__c</fullName>
    <description>The date the parcel was legally ended.</description>
    <label>Legal End Date</label>
    <type>Date</type>
</CustomField>