force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Legal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Legal_Start_Date__c</fullName>
    <description>The date the parcel was legally started.</description>
    <label>Legal Start Date</label>
    <type>Date</type>
</CustomField>