force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Lot__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Lot__c</fullName>
    <description>The lot number of the property. This can be used in conjunction with the subdivision, block, or section.</description>
    <label>Lot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>