force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Lot_Size__c</fullName>
    <description>The surface extent of the property.</description>
    <label>Lot Size</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>