force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Map_Reference__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Map_Reference__c</fullName>
    <description>Description of the boundaries, names or unique identifiers of the geographic area.</description>
    <label>Map Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>