force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Number__c</fullName>
    <description>Alternate Parcel Number that can be used to find this parcel, but may not necessarily be unique.</description>
    <label>Parcel Number Alternate</label>
    <length>150</length>
    <type>Text</type>
</CustomField>