force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Parent_Parcel__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parent_Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated parcel that is the containing parcel for addresses, units or sub-lots.</description>
    <label>Parent Parcel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Parcel__c.MUSW__Historic__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Related Parcels</relationshipLabel>
    <relationshipName>Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>