force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Region__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>MUSW__Region__c</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels</relationshipName>
    <type>Lookup</type>
</CustomField>