force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street__c</fullName>
    <description>If address part fields are used, concatenate them into a single string.</description>
    <formula>IF(MUSW__Street2__c !=  &quot;&quot;, IF( MUSW__Street_Number__c != &quot;&quot;,MUSW__Street_Number__c &amp; &quot; &quot;,&quot;&quot;) &amp;  IF( MUSW__Street_Direction__c != &quot;&quot;,MUSW__Street_Direction__c &amp; &quot; &quot;,&quot;&quot;) &amp; MUSW__Street2__c &amp; IF(MUSW__Street_Suffix__c != &quot;&quot;,&quot; &quot; &amp; MUSW__Street_Suffix__c,&quot;&quot;) &amp; IF( MUSW__Unit__c != &quot;&quot;, &quot; &quot; &amp; IF(MUSW__Unit_Type__c != &quot;&quot;, MUSW__Unit_Type__c &amp; &quot; &quot;, &quot;#&quot;) &amp; MUSW__Unit__c,&quot;&quot;), Name)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>