force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Street_Suffix__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Suffix__c</fullName>
    <description>The type of street for this parcel or address: i.e., street, avenue, alley, boulevard, etc. May be abbreviated to postal standards.</description>
    <label>Street Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>