force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tax_Area__c</fullName>
    <description>The jurisdiction of the tax authority this parcel or address is located in. Jurisdictions may overlap.</description>
    <label>Tax Area</label>
    <length>8</length>
    <type>Text</type>
</CustomField>