force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Unit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit__c</fullName>
    <description>The number or letter of the condo or apartment unit.</description>
    <label>Unit</label>
    <length>16</length>
    <type>Text</type>
</CustomField>