force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit_Type__c</fullName>
    <description>The type of unit this address is for; i.e., Suite, Unit, etc.</description>
    <label>Unit Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>