force-app/main/default/objects/MUSW__Parcel__c/fields/MUSW__Year_Built__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Year_Built__c</fullName>
    <description>The year the current building was constructed.</description>
    <label>Year Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>