force-app/main/default/objects/MUSW__Parcel__c/fields/Street_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Street_Encrypted__c</fullName>
    <label>Street Encrypted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>