force-app/main/default/objects/MUSW__Parcel__c/fields/Street_Suffix_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Street_Suffix_Encrypted__c</fullName>
    <label>Street Suffix Encrypted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>