force-app/main/default/objects/MUSW__Parcel__c/fields/UNIQUEID__c.field-meta.xml
<CustomField>
    <fullName>UNIQUEID__c</fullName>
    <externalId>true</externalId>
    <label>UNIQUEID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>