force-app/main/default/objects/MUSW__Parcel__c/validationRules/MUSW__Legal_Start_And_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Legal_Start_And_End_Date_Validation</fullName>
    <active>true</active>
    <description>Legal start date must be before legal end date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(MUSW__Legal_Start_Date__c)), NOT(ISBLANK(MUSW__Legal_End_Date__c)), MUSW__Legal_Start_Date__c &gt;= MUSW__Legal_End_Date__c)</errorConditionFormula>
    <errorMessage>Legal start date must be before legal end date.</errorMessage>
</ValidationRule>