force-app/main/default/objects/MUSW__Parcel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Parcel_Number2__c</columns>
    <columns>MUSW__Street__c</columns>
    <columns>MUSW__Street2__c</columns>
    <columns>MUSW__Street_Number__c</columns>
    <columns>MUSW__Geolocation__Latitude__s</columns>
    <columns>MUSW__Geolocation__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>