force-app/main/default/objects/MUSW__Parcel__c/listViews/Parcels_with_Geolocation.listView-meta.xml
<ListView>
    <fullName>Parcels_with_Geolocation</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Parcel_Number2__c</columns>
    <columns>MUSW__Geolocation__Latitude__s</columns>
    <columns>MUSW__Geolocation__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Geolocation__Latitude__s</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>MUSW__Geolocation__Longitude__s</field>
        <operation>notEqual</operation>
    </filters>
    <label>Parcels with Geolocation</label>
</ListView>